--- a/about.qmd
+++ b/about.qmd
@@ -5,7 +5,7 @@ editor: visual
 jupyter: python3
 ---
 
-This project was developed by Juan Nadal For [INFO 523 - Data Mining and Discovery](https://datamineaz.org/) at the University of Arizona, taught by Dr. Greg Chism. The team is comprised of the following team members.
+This project was developed by **Juan Nadal** For [INFO 523 - Data Mining and Discovery](https://datamineaz.org/) at the University of Arizona, taught by Dr. Greg Chism. The team is comprised of the following team members.
 
 -   Juan Nadal: First-year Data Science student with an MBA and professional experience as a data scientist.
 
