--- a/presentation.qmd
+++ b/presentation.qmd
@@ -1,7 +1,7 @@
 ---
-title: "Project title"
-subtitle: "INFO 523 - Summer 2025 - Final Project"
-author: "Author names"
+title: "Are Movie Stars Worth Their Premiums?"
+subtitle: "INFO 523 - Data Mining and Discovery - Final Project"
+author: "Juan Nadal"
 title-slide-attributes:
   data-background-image: images/watercolour_sys02_img34_teacup-ocean.jpg
   data-background-size: stretch
@@ -9,159 +9,306 @@ title-slide-attributes:
   data-slide-number: none
 format:
   revealjs:
-    theme:  ['data/customtheming.scss']
-  
+    theme: ['data/customtheming.scss']
+    transition: slide
+    slide-number: true
 editor: visual
 jupyter: python3
 execute:
   echo: false
+  warning: false
 ---
 
-```{python}
-#| label: load-packages
-#| include: false
+## Research Question {.smaller}
 
-# Load packages here
-import pandas as pd
-import seaborn as sns
-
-```
-
-```{python}
-#| label: setup
-#| include: false
-#| 
-# Set up plot theme and figure resolution
-sns.set_theme(style="whitegrid")
-sns.set_context("notebook", font_scale=1.1)
-
-import matplotlib.pyplot as plt
-plt.rcParams['figure.dpi'] = 300
-plt.rcParams['savefig.dpi'] = 300
-plt.rcParams['figure.figsize'] = (6, 6 * 0.618)
-```
-
-```{python}
-#| label: load-data
-#| include: false
-# Load data in Python
-mtcars = sns.load_dataset('mpg').dropna()  # mtcars dataset is similar to the mpg dataset from seaborn
-mtcars['speed'] = mtcars['horsepower'] / mtcars['weight']
-
-penguins = sns.load_dataset('penguins').dropna()
-```
-
-# Using Quarto for presentations
-
-## Quarto
-
--   The presentation is created using the Quarto CLI
-
--   `##` sets the start of a new slide
-
-## Layouts
-
-You can use plain text
-
-::: columns
-::: {.column width="40%"}
--   or bullet points[^1]
-:::
-
-::: {.column width="60%"}
-or in two columns
-:::
-:::
-
-[^1]: And add footnotes
-
--   like
-
--   this
-
-## Code
-
-```{python}
-from sklearn.linear_model import LinearRegression
-import statsmodels.api as sm
-import pandas as pd
-
-# Fit a linear regression model
-X = mtcars[['speed']]
-y = mtcars['mpg']
-model = LinearRegression().fit(X, y)
-
-# Summary of the model
-X2 = sm.add_constant(X)
-est = sm.OLS(y, X2)
-est2 = est.fit()
-print(est2.summary())
-```
-
-## Plots
-
-```{python}
-penguins['species'] = penguins['species'].apply(lambda x: "Adelie" if x == "Adelie" else "Other")
-sns.scatterplot(data=penguins, x='flipper_length_mm', y='body_mass_g', hue='species')
-plt.show()
-```
-
-## Plot and text
+**Do expensive movie stars justify their premiums?**
 
 ::: columns
 ::: {.column width="50%"}
--   Some text
+**Competing Factors:**
 
--   goes here
+-   Star power (cast historical ROI)
+-   Production budget
+-   Release timing
+-   Genre selection
+-   Franchise status
 :::
 
 ::: {.column width="50%"}
-```{python}
-#| warning: false
-#| fig.width: 5.5
-fig, ax = plt.subplots(figsize=(5.5, 5.5 * 0.618))
-sns.boxplot(data=penguins, x='bill_length_mm', y='species', hue='species', ax=ax)
-plt.show()
-```
+**Dataset:**
+
+-   5,311 movies (1915-2017)
+-   TMDB + IMDb sources
+-   Complete financial data
+-   51 engineered features
 :::
 :::
 
-# A new section...
+**Method:** Statistical analysis + Machine learning
 
-## Tables
+## The Answer {.center}
 
-If you want to generate a table, make sure it is in the HTML format (instead of Markdown or other formats), e.g.,
+::: {.fragment .fade-in}
+### **YES**
+### (but only with proven track records)
+:::
 
-```{python}
-penguins.head().to_html()
-```
+::: {.fragment .fade-in}
+**Star power accounts for 85% of ROI prediction**
 
-## Images
+18x more important than all other factors combined
+:::
 
-![Image credit: Danielle Navarro, Percolate.](images/watercolour_sys02_img34_teacup-ocean.png){fig-align="center" width="500"}
+## Data Overview {.smaller}
 
-## Math Expressions {.smaller}
+**Three Kaggle Datasets → 5,311 Movies**
 
-You can write LaTeX math expressions inside a pair of dollar signs, e.g. \$\\alpha+\\beta\$ renders $\alpha + \beta$. You can use the display style with double dollar signs:
+| Metric | Value |
+|--------|-------|
+| Total revenue analyzed | $485.6 billion |
+| Total budget analyzed | $167.2 billion |
+| Median ROI | 106.7% |
+| Date range | 1915-2017 |
+| Features engineered | 51 |
 
-```         
-$$\bar{X}=\frac{1}{n}\sum_{i=1}^nX_i$$
-```
+**Success Metric:** ROI = (Revenue - Budget) / Budget × 100
 
-$$
-\bar{X}=\frac{1}{n}\sum_{i=1}^nX_i
-$$
+## Data Quality & Outlier Handling {.smaller}
 
-Limitations:
+**Challenge:** Raw dataset contained extreme outliers and data errors
 
-1.  The source code of a LaTeX math expression must be in one line, unless it is inside a pair of double dollar signs, in which case the starting `$$` must appear in the very beginning of a line, followed immediately by a non-space character, and the ending `$$` must be at the end of a line, led by a non-space character;
+::: columns
+::: {.column width="50%"}
+**Issues Identified:**
 
-2.  There should not be spaces after the opening `$` or before the closing `$`.
+- **Budget errors:** 52 movies with budget < $1,000
+  - Example: Budget = $1, causing ROI > 1 billion%
+- **Extreme ROI outliers:** Max uncapped ROI = 1,239,638,200%
+- **Missing cast data:** 88% of movies (4,671)
+  - Only 640 movies (12%) have historical actor ROI
+:::
 
-# Wrap up
+::: {.column width="50%"}
+**Solutions Applied:**
 
-## Feeling adventurous?
+1. **Budget filter:** Removed movies < $1,000
+2. **ROI capping:** 99th percentile = 6,620.4%
+3. **Data validation:** Final dataset = 5,311 movies
+4. **Feature engineering:** Created star_tier, is_alist
 
--   You are welcomed to use the default styling of the slides. In fact, that's what I expect majority of you will do. You will differentiate yourself with the content of your presentation.
+**Result:** Clean, analyzable dataset with realistic ROI values
+:::
+:::
 
--   But some of you might want to play around with slide styling. Some solutions for this can be found at https://quarto.org/docs/presentations/revealjs.
+## Methodology {.smaller}
+
+::: columns
+::: {.column width="50%"}
+**Statistical Analysis:**
+
+- Correlation analysis (pandas.corr)
+- ANOVA: Star tier comparison
+- T-test: A-list vs non-A-list
+- Effect sizes (η², Cohen's d)
+- All p-values < 0.001
+:::
+
+::: {.column width="50%"}
+**Machine Learning:**
+
+- 6 models trained
+- Train/test split: 80/20
+- Best: XGBoost (93.2% R²)
+- Feature importance extraction
+- Cross-validation
+:::
+:::
+
+## Star Power Analysis {.smaller}
+
+![Top 20 Actors by ROI](images/analysis/viz_3_star_power.png)
+
+**Key Finding:** Actors with 300%+ historical ROI consistently deliver high returns
+
+## Statistical Evidence {.smaller}
+
+**Correlation with ROI:**
+
+| Feature | Correlation |
+|---------|-------------|
+| **cast_avg_roi** | **0.441** |
+| vote_average | 0.171 |
+| revenue | 0.146 |
+| budget | -0.135 |
+| runtime | -0.029 |
+
+**Star power strongest among movies with cast data (n=640, 12.1%)**
+
+## ANOVA: Star Tiers {.smaller}
+
+**Mean ROI by Star Category:**
+
+- Superstar (>300% cast ROI): **788.5% ROI** (124 movies, 2.3%)
+- A-list (150-300%): **215.8% ROI** (169 movies, 3.2%)
+- B-list (50-150%): **62.6% ROI** (225 movies, 4.2%)
+- Unknown/C-list (<50%): **350.1% ROI** (4,793 movies, 90.2%)
+
+**F-statistic: 19.1, p < 0.001**
+
+::: {style="font-size: 0.85em; margin-top: 1em; padding: 0.5em; background-color: #fff3cd; border-left: 4px solid #ffc107;"}
+**Note:** The Unknown/C-list category's high ROI (350.1%) is misleading - it includes 88% of all movies with missing cast data. This is NOT evidence that unknown actors perform better. Our star power analysis focuses on the 640 movies (12%) with complete cast financial data.
+:::
+
+## T-Test: Star Power Impact {.smaller}
+
+**Top-Tier Stars vs All Other Films:**
+
+::: columns
+::: {.column width="50%"}
+**All Other Films:**
+- Mean ROI: 337.2%
+- Sample: 5,018 movies
+- (Includes B-list, C-list, & Unknown)
+
+**Top-Tier Stars (A-list + Superstar):**
+- Mean ROI: 458.2%
+- Sample: 293 movies
+- (cast_avg_roi >= 150%)
+:::
+
+::: {.column width="50%"}
+**Difference: +121.0% ROI**
+
+- T-statistic: 2.25
+- P-value: 0.024
+- Cohen's d: 0.14 (small effect)
+
+**Top-tier stars show statistically significant 121-point increase in ROI**
+:::
+:::
+
+## Machine Learning Results {.smaller}
+
+**6 Models Trained:**
+
+| Model | R² Score |
+|-------|----------|
+| **XGBoost** | **93.2%** ✓ |
+| Gradient Boosting | 92.6% |
+| Random Forest | 88.2% |
+| Lasso Regression | 33.9% |
+| Ridge Regression | 33.8% |
+| Linear Regression | 33.6% |
+
+**Exceeded 90% accuracy target**
+
+## Feature Importance {.smaller}
+
+![](images/analysis/feature_importance.png){width=80%}
+
+**Top 3 Features:**
+1. **cast_avg_roi: 85.05%**
+2. revenue: 3.37%
+3. budget_log: 2.12%
+
+**Star power is 18x more important than budget!**
+
+## Budget vs ROI {.smaller}
+
+![Budget doesn't guarantee success](images/analysis/viz_5_budget_vs_revenue.png)
+
+- Budget correlation with ROI: r = 0.087 (weak)
+- Many high-budget films fail
+- **Implication:** Spending more ≠ Success
+
+## Release Timing {.smaller}
+
+![Seasonality patterns exist but aren't decisive](images/analysis/viz_2_seasonality.png)
+
+- June: Highest revenue ($153.8M avg)
+- But release month: Only 1.2% of prediction
+- **Implication:** WHEN matters less than WHO
+
+## Model Predictions {.smaller}
+
+**Hypothetical Scenarios:**
+
+| Scenario | Budget | Cast ROI | Predicted ROI | Profit |
+|----------|--------|----------|---------------|--------|
+| Summer Blockbuster | $100M | 300% | **166%** | $66M |
+| Low-Budget Horror | $2M | 50% | **131%** | $624K |
+| Holiday Animation | $75M | 200% | **162%** | $47M |
+
+**Key:** Same budget, different cast → 35% ROI difference
+
+## Practical Implications {.smaller}
+
+::: columns
+::: {.column width="50%"}
+**What Works:**
+
+1. Hire proven ROI actors (>200%)
+2. Analyze historical performance
+3. Track record > Social media fame
+:::
+
+::: {.column width="50%"}
+**What Doesn't:**
+
+4. Overspending on budget
+5. Summer release timing alone
+6. Genre selection without stars
+:::
+:::
+
+**Bottom Line:** Cast first, budget second
+
+## Limitations & Future Work {.smaller}
+
+**Limitations:**
+- **Limited cast data:** Only 12% of movies have complete actor ROI history
+- Pre-streaming era data (1915-2017)
+- No marketing spend data
+- Correlation ≠ causation
+
+**Future:**
+- Add Netflix/Disney+ data
+- Include social media metrics
+- Test with 2024-2025 releases
+
+## Conclusion {.center}
+
+### **Stars ARE Worth Their Premiums**
+
+::: {.fragment .fade-in}
+**IF they have proven ROI > 200%**
+:::
+
+::: {.fragment .fade-in}
+**Evidence:**
+- 85% of prediction importance
+- 121% higher ROI for top-tier stars
+- 93.2% ML prediction accuracy
+- Significant statistical tests (p < 0.05)
+
+::: {style="font-size: 0.75em; margin-top: 0.5em; font-style: italic;"}
+*Star power analysis based on 640 movies (12%) with complete cast financial data*
+:::
+:::
+
+::: {.fragment .fade-in}
+**Recommendation:** Prioritize casting decisions over budget size
+:::
+
+## Questions? {.center}
+
+**Repository:** github.com/INFO523-F25/final-project-juan-nadal-solo
+
+**Key Metrics:**
+- 5,311 movies analyzed
+- 93.2% prediction accuracy
+- 85% star power importance
+
+**Contact:** College of Information Science, University of Arizona
+
+Thank you!
