Add `02_star_power_analysis.ipynb` for evaluating movie star ROI impact:
- Includes statistical analysis of star power vs. movie ROI using pandas.
- Defines star power metrics, categorizes star tiers, and visualizes findings.
- Outputs summary statistics and saves visualizations to `images/analysis`.

--- a/notebooks/01_data_preparation.ipynb
+++ b/notebooks/01_data_preparation.ipynb
@@ -38,8 +38,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-11T02:36:20.011920Z",
-     "start_time": "2025-11-11T02:36:20.006145Z"
+     "end_time": "2025-11-11T03:53:24.487522Z",
+     "start_time": "2025-11-11T03:53:24.482178Z"
     }
    },
    "source": [
@@ -72,14 +72,14 @@
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 32
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-11T02:36:20.081625Z",
-     "start_time": "2025-11-11T02:36:20.045737Z"
+     "end_time": "2025-11-11T03:53:24.535764Z",
+     "start_time": "2025-11-11T03:53:24.502097Z"
     }
    },
    "source": [
@@ -112,14 +112,14 @@
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 33
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-11T02:36:20.094143Z",
-     "start_time": "2025-11-11T02:36:20.088631Z"
+     "end_time": "2025-11-11T03:53:24.548227Z",
+     "start_time": "2025-11-11T03:53:24.542785Z"
     }
    },
    "source": [
@@ -200,14 +200,14 @@
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 34
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-11T02:36:20.226662Z",
-     "start_time": "2025-11-11T02:36:20.208249Z"
+     "end_time": "2025-11-11T03:53:24.624294Z",
+     "start_time": "2025-11-11T03:53:24.605249Z"
     }
    },
    "source": [
@@ -722,19 +722,19 @@
        "</div>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 9
+   "execution_count": 35
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-11T02:36:20.305381Z",
-     "start_time": "2025-11-11T02:36:20.296224Z"
+     "end_time": "2025-11-11T03:53:24.699767Z",
+     "start_time": "2025-11-11T03:53:24.691078Z"
     }
    },
    "source": [
@@ -904,12 +904,12 @@
        "</div>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 10
+   "execution_count": 36
   },
   {
    "cell_type": "markdown",
@@ -924,8 +924,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-11T03:25:56.009932Z",
-     "start_time": "2025-11-11T03:25:55.999390Z"
+     "end_time": "2025-11-11T03:53:24.950083Z",
+     "start_time": "2025-11-11T03:53:24.939807Z"
     }
    },
    "source": [
@@ -964,14 +964,14 @@
      ]
     }
    ],
-   "execution_count": 30
+   "execution_count": 37
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-11T02:36:20.710018Z",
-     "start_time": "2025-11-11T02:36:20.702344Z"
+     "end_time": "2025-11-11T03:53:25.019315Z",
+     "start_time": "2025-11-11T03:53:25.013228Z"
     }
    },
    "source": [
@@ -1011,14 +1011,14 @@
      ]
     }
    ],
-   "execution_count": 12
+   "execution_count": 38
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-11T02:36:21.005375Z",
-     "start_time": "2025-11-11T02:36:20.991422Z"
+     "end_time": "2025-11-11T03:53:25.387955Z",
+     "start_time": "2025-11-11T03:53:25.374619Z"
     }
    },
    "source": [
@@ -1143,12 +1143,12 @@
        "</div>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 13
+   "execution_count": 39
   },
   {
    "cell_type": "markdown",
@@ -1163,8 +1163,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-11T02:36:21.196005Z",
-     "start_time": "2025-11-11T02:36:21.186176Z"
+     "end_time": "2025-11-11T03:53:25.464036Z",
+     "start_time": "2025-11-11T03:53:25.455034Z"
     }
    },
    "source": [
@@ -1219,18 +1219,18 @@
       "PROFITABILITY BREAKDOWN\n",
       "============================================================\n",
       "Profitable movies (ROI > 0): 3,716 (70.0%)\n",
-      "Unprofitable movies (ROI â‰¤ 0): 1,595 (30.0%)\n"
+      "Unprofitable movies (ROI < 0): 1,595 (30.0%)\n"
      ]
     }
    ],
-   "execution_count": 14
+   "execution_count": 40
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-11T02:36:22.070443Z",
-     "start_time": "2025-11-11T02:36:21.296338Z"
+     "end_time": "2025-11-11T03:53:26.151348Z",
+     "start_time": "2025-11-11T03:53:25.534026Z"
     }
    },
    "source": [
@@ -1288,7 +1288,7 @@
      ]
     }
    ],
-   "execution_count": 15
+   "execution_count": 41
   },
   {
    "cell_type": "markdown",
@@ -1303,8 +1303,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-11T02:36:22.125161Z",
-     "start_time": "2025-11-11T02:36:22.119644Z"
+     "end_time": "2025-11-11T03:53:26.201146Z",
+     "start_time": "2025-11-11T03:53:26.195939Z"
     }
    },
    "source": [
@@ -1373,14 +1373,14 @@
      ]
     }
    ],
-   "execution_count": 16
+   "execution_count": 42
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-11T02:36:22.169526Z",
-     "start_time": "2025-11-11T02:36:22.161063Z"
+     "end_time": "2025-11-11T03:53:26.257845Z",
+     "start_time": "2025-11-11T03:53:26.250726Z"
     }
    },
    "source": [
@@ -1417,14 +1417,14 @@
      ]
     }
    ],
-   "execution_count": 17
+   "execution_count": 43
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-11T02:36:22.184611Z",
-     "start_time": "2025-11-11T02:36:22.177534Z"
+     "end_time": "2025-11-11T03:53:26.292447Z",
+     "start_time": "2025-11-11T03:53:26.285943Z"
     }
    },
    "source": [
@@ -1468,14 +1468,14 @@
      ]
     }
    ],
-   "execution_count": 18
+   "execution_count": 44
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-11T02:36:22.215184Z",
-     "start_time": "2025-11-11T02:36:22.208128Z"
+     "end_time": "2025-11-11T03:53:26.311033Z",
+     "start_time": "2025-11-11T03:53:26.304521Z"
     }
    },
    "source": [
@@ -1519,14 +1519,14 @@
      ]
     }
    ],
-   "execution_count": 19
+   "execution_count": 45
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-11T02:36:22.251603Z",
-     "start_time": "2025-11-11T02:36:22.246232Z"
+     "end_time": "2025-11-11T03:53:26.325556Z",
+     "start_time": "2025-11-11T03:53:26.320040Z"
     }
    },
    "source": [
@@ -1565,7 +1565,7 @@
      ]
     }
    ],
-   "execution_count": 20
+   "execution_count": 46
   },
   {
    "cell_type": "markdown",
@@ -1610,8 +1610,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-11T02:42:39.605061Z",
-     "start_time": "2025-11-11T02:42:39.577332Z"
+     "end_time": "2025-11-11T03:53:26.345244Z",
+     "start_time": "2025-11-11T03:53:26.336071Z"
     }
    },
    "source": [
@@ -1683,7 +1683,7 @@
      ]
     }
    ],
-   "execution_count": 27
+   "execution_count": 47
   },
   {
    "cell_type": "markdown",
